[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crete"
version = "0.0.1"
authors = [
  { name="Blair Cross", email="blair@bxsys.dev" },
]
description = "An RL agent training assistant"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]